--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div id="headerMain" class="mw-100 container">
         <div class="row subHeaderMain">
             <img id="mainIcon" class="col-4" src="./Multimedia/Icons/LogoJDC3Inverted_noname.png">
-            <p class="mainTitle col-8">Master Javier del Castillo</p>
+            <p id="mainTitle" class="mainTitle col-7">Master Javier del Castillo</p>
         </div>
     </div>
 
