--- a/Pages/about.html
+++ b/Pages/about.html
@@ -6,9 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../Styles/style.css">
 
     <title>Master del Castillo - Acerca de</title>
@@ -24,7 +21,7 @@
                 <img class="navbar-imagen" src="../Multimedia/Icons/LogoJDC3Inverted_noname.png"></img>
                 Master Del Castillo
             </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -34,13 +31,13 @@
                         <a class="nav-link" href="../index.html">Inicio </a>
                     </li>
                     <li class="nav-item" active>
-                        <a class="nav-link nav-link-activo" href="./about.html">Acerca de</a>
+                        <a class="nav-link nav-link-activo disabled" href="./about.html">Acerca de</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Galeria</a>
+                        <a class="nav-link" href="./gallery.html">Galeria</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled" href="#">Contacto</a>
+                        <a class="nav-link " href="./contact.html">Contacto</a>
                     </li>
                 </ul>
             </div>
@@ -548,8 +545,8 @@
     <div id="academiasDiv" class="mw-100 container">
         <section id="academiasSection" class="row">
             <h1 class="subtituloTipoUno">Academias</h1>
-            <div class="card col-md-6">
-                <img class="cardImagen col-md-12" src="../Multimedia/Academias/Jung-Do-Logo.jpg" alt="">
+            <div class="card col-xl-3">
+                <img class="cardImagen col-md-2" src="../Multimedia/Academias/Jung-Do-Logo.jpg" alt="">
                 <div class="cardText">
                     <p class="tituloAcademia"> ACADEMIA JUNG DO </p>
                     <p class="ubicacionAcademia instructorAcademia">Ciudad de Canelones, Uruguay</p>
@@ -568,7 +565,7 @@
                 </div>
             </div>
 
-            <div class="card col-md-6">
+            <div class="card col-xl-3">
                 <img class="cardImagen" src="../Multimedia/Academias/marinos.png" alt="">
                 <div class="cardText">
                     <p class="tituloAcademia"> ACADEMIA MARIÑO´S </p>
@@ -588,7 +585,7 @@
                 </div>
             </div>
 
-            <div class="card col-md-5">
+            <div class="card col-xl-3">
                 <img class="cardImagen" src="../Multimedia/Academias/Yom Chi.png" alt="">
                 <div class="cardText">
                     <p class="tituloAcademia"> ACADEMIA YOM CHI </p>
@@ -607,7 +604,7 @@
                 </div>
             </div>
 
-            <div class="card col-md-5">
+            <div class="card col-xl-3">
                 <img class="cardImagen" src="../Multimedia/Academias/Ttang do.png" alt="">
                 <div class="cardText">
                     <p class="tituloAcademia"> ACADEMIA TANG DO </p>
@@ -626,7 +623,7 @@
                 </div>
             </div>
 
-            <div class="card col-md-5">
+            <div class="card col-xl-3">
                 <img class="cardImagen" src="../Multimedia/Academias/guk gi.png" alt="">
                 <div class="cardText">
                     <p class="tituloAcademia"> ACADEMIA GUK GI </p>
@@ -644,7 +641,7 @@
                 </div>
             </div>
 
-            <div class="card col-md-5">
+            <div class="card col-xl-3">
                 <img class="cardImagen" src="../Multimedia/Academias/innae.png" alt="">
                 <div class="cardText">
                     <p class="tituloAcademia"> ACADEMIA INNAE </p>
@@ -664,7 +661,7 @@
                 </div>
             </div>
 
-            <div class="card col-md-5">
+            <div class="card col-xl-3">
                 <img class="cardImagen" src="../Multimedia/Academias/Sul Sa.png" alt="">
                 <div class="cardText">
                     <p class="tituloAcademia"> ACADEMIA SUL SA </p>
