--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -6,9 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../Styles/style.css">
 
     <title>Master del Castillo - Contacto</title>
@@ -24,7 +23,7 @@
                 <img class="navbar-imagen" src="../Multimedia/Icons/LogoJDC3Inverted_noname.png"></img>
                 Master Del Castillo
             </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -34,13 +33,13 @@
                         <a class="nav-link" href="../index.html">Inicio </a>
                     </li>
                     <li class="nav-item" active>
-                        <a class="nav-link nav-link-activo" href="./about.html">Acerca de</a>
+                        <a class="nav-link " href="./about.html">Acerca de</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Galeria</a>
+                        <a class="nav-link" href="./gallery.html">Galeria</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled" href="#">Contacto</a>
+                        <a class="nav-link nav-link-activo disabled" href="./contact.html">Contacto</a>
                     </li>
                 </ul>
             </div>
@@ -69,7 +68,7 @@
                 <h3 class="subTitulo">Whatsapp: </h3>
                 <p class="subDato">+598 92 455 751</p>
             </section>
-            
+
         </main>
 
     </section>
