--- a/Pages/gallery.html
+++ b/Pages/gallery.html
@@ -6,9 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../Styles/style.css">
 
     <title>Master del Castillo - Galeria</title>
@@ -25,7 +24,7 @@
                     <img class="navbar-imagen" src="../Multimedia/Icons/LogoJDC3Inverted_noname.png"></img>
                     Master Del Castillo
                 </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -35,24 +34,25 @@
                             <a class="nav-link" href="../index.html">Inicio </a>
                         </li>
                         <li class="nav-item" active>
-                            <a class="nav-link nav-link-activo" href="./about.html">Acerca de</a>
+                            <a class="nav-link " href="./about.html">Acerca de</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Galeria</a>
+                            <a class="nav-link nav-link-activo disabled" href="./gallery.html">Galeria</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link disabled" href="#">Contacto</a>
+                            <a class="nav-link " href="./contact.html">Contacto</a>
                         </li>
                     </ul>
                 </div>
             </nav>
         </header>
 
+
         <section class="sectorGaleria row">
             <div class="col-sm-12 sectorGaleriaTexto">
 
                 <a class="sectorGaleriaTextoLink" href="../Pages/gallery_clases.html">
-                    <h1 class="sectorGaleriaTextoTitulo col-sm-12"></h1>Clases y Formación</h1>
+                    <h1 class="sectorGaleriaTextoTitulo col-sm-12">Clases y Formación</h1>
                 </a>
                 <p class="sectorGaleriaTextoParrafo  col-sm-12">Galería de imágenes de clases de niñas, niños,
                     adolescentes
@@ -72,12 +72,10 @@
             <div class="col-sm-12 sectorGaleriaTexto">
 
                 <a class="sectorGaleriaTextoLink" href="../Pages/gallery_competition.html">
-                    <h1 class="sectorGaleriaTextoTitulo col-sm-12"></h1>Competencias</h1>
+                    <h1 class="sectorGaleriaTextoTitulo col-sm-12">Competencias</h1>
                 </a>
                 <p class="sectorGaleriaTextoParrafo  col-sm-12">Galería de imágenes de competencias de distintas
-                    categorías
-                    realizadas por los alumnos tanto a nivel
-                    nacional como internacional</p>
+                    categorías realizadas por los alumnos tanto a nivel Nacional como internacional</p>
             </div>
             <a class="sectorGaleriaImagenLink col-sm-12" href="../Pages/gallery_competition.html"><img
                     class="sectorGaleriaImagenLink col-sm-4" src="..//Multimedia/Gallery/Portada/Portada2.jpg"
