--- a/Pages/gallery_clases.html
+++ b/Pages/gallery_clases.html
@@ -6,9 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../Styles/style.css">
 
     <title>Master del Castillo - Galeria - Clases</title>
@@ -24,23 +23,23 @@
                 <img class="navbar-imagen" src="../Multimedia/Icons/LogoJDC3Inverted_noname.png"></img>
                 Master Del Castillo
             </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="..//../index.html">Inicio </a>
+                        <a class="nav-link" href="../index.html">Inicio </a>
                     </li>
                     <li class="nav-item" active>
-                        <a class="nav-link nav-link-activo" href="..//../about.html">Acerca de</a>
+                        <a class="nav-link " href="./about.html">Acerca de</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Galeria</a>
+                        <a class="nav-link" href="./gallery.html">Galeria</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled" href="#">Contacto</a>
+                        <a class="nav-link " href="./contact.html">Contacto</a>
                     </li>
                 </ul>
             </div>
@@ -48,7 +47,7 @@
     </header>
 
     <section class="galeriaContenedor sectorClasesGaleriaUno row">
-        <h1 class="galeriaTitulo">Exhibición de Taekwon-do en el Centro Militar de Salinas. "Todos por Naarah"</h1>
+        <h1 class="galeriaTitulo">Exhibición de Taekwon-do. "Todos por Naarah"</h1>
         <a class="botonGaleria" href="#!" data-bs-toggle="modal" data-bs-target="#modalGaleria1">Abrir Galeria</a>
 
         <!-- MODAL GALERIA 1 -->
@@ -167,6 +166,7 @@
     <!-- END MODAL GALERIA 2 -->
 
     <!-- PIE DE PAGINA -->
+
     <footer class="mw-100 container">
         <div class="row">
             <img id="footerFederation" class="col-12 col-xl-4" src="../Multimedia/Icons/ITF_CHAN_HUN.png"></img>
