se agrego la carta de saludo al index

--- a/index.html
+++ b/index.html
@@ -56,48 +56,54 @@
         </section>
     </main>
 
-    <!-- SECCIÓN DE NOVEDADES (CAROUSELL) -->
-    <section id="bloqueNovedades">
-        <p id="novedades">Novedades</p>
-        <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <a
-                        href="https://www.instagram.com/p/C5Ev1yURLSm/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==">
-                        <img src="./Multimedia/Afiches/24.05.jpg" class="d-block w-100" alt="...">
-                    </a>
-                </div>
-                <div class="carousel-item">
-                    <a
-                        href="https://www.instagram.com/p/Cx8yDnGxXzA/?utm_source=ig_web_copy_link&igshid=MzRlODBiNWFlZA==">
-                        <img src="./Multimedia/Afiches/23.10.jpg" class="d-block w-100" alt="...">
-                    </a>
-                </div>
-                <div class="carousel-item">
-                    <a
-                        href="https://www.instagram.com/reel/CxEUjrzsYJB/?utm_source=ig_web_copy_link&igshid=MzRlODBiNWFlZA==">
-                        <img src="./Multimedia/Afiches/23.09.jpg" class="d-block w-100" alt="...">
-                    </a>
-                </div>
-                <div class="carousel-item">
-                    <a href="https://www.instagram.com/reel/CpO0J06AYEf/?utm_source=ig_web_copy_link">
-                        <img src="./Multimedia/Afiches/23.05.jpg" class="d-block w-100 " alt="...">
-                    </a>
-                </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
+    <!-- CERTIFICADO FEDERACIÓN -->
+    <section class="row contenedorCertificadoNovedades ">
+        <div class="certificado col-xl-5">
+            <img class="imgCertificado" src="./Multimedia/Certificados y Cartas/Carta por 30 años.jpg" alt="">
         </div>
-    </section>
 
+        <!-- SECCIÓN DE NOVEDADES (CAROUSELL) -->
+        <section id="bloqueNovedades" class="col-xl-5">
+            <p id="novedades"> Novedades </p>
+            <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <a
+                            href="https://www.instagram.com/p/C5Ev1yURLSm/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==">
+                            <img src="./Multimedia/Afiches/24.05.jpg" class="d-block w-100" alt="...">
+                        </a>
+                    </div>
+                    <div class="carousel-item">
+                        <a
+                            href="https://www.instagram.com/p/Cx8yDnGxXzA/?utm_source=ig_web_copy_link&igshid=MzRlODBiNWFlZA==">
+                            <img src="./Multimedia/Afiches/23.10.jpg" class="d-block w-100" alt="...">
+                        </a>
+                    </div>
+                    <div class="carousel-item">
+                        <a
+                            href="https://www.instagram.com/reel/CxEUjrzsYJB/?utm_source=ig_web_copy_link&igshid=MzRlODBiNWFlZA==">
+                            <img src="./Multimedia/Afiches/23.09.jpg" class="d-block w-100" alt="...">
+                        </a>
+                    </div>
+                    <div class="carousel-item">
+                        <a href="https://www.instagram.com/reel/CpO0J06AYEf/?utm_source=ig_web_copy_link">
+                            <img src="./Multimedia/Afiches/23.05.jpg" class="d-block w-100 " alt="...">
+                        </a>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </section>
+    </section>
     <!-- PIE DE PAGINA -->
     <footer class="mw-100 container">
         <div class="row">
