se corrige el video de YT

--- a/Pages/about.html
+++ b/Pages/about.html
@@ -116,7 +116,13 @@
     </div>
 
     <!-- Video Youtube -->
-    <iframe class="videoYT" src="https://youtu.be/XWVGzkrV1mM" type=""></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/watch?v=XWVGzkrV1mM"
+        title="YouTube video player" frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <div class="mw-100 p-5 embed-responsive embed-responsive-16by9">
+        <iframe class="embed-responsive-item" src="https://youtu.be/XWVGzkrV1mM" allowfullscreen></iframe>
+    </div>
 
     <!-- Logros, Cursos y Seminarios -->
     <aside class="container contenedorLogros">
