--- a/Pages/about_en.html
+++ b/Pages/about_en.html
@@ -112,7 +112,10 @@
     </div>
 
     <!-- Video Youtube -->
-    <iframe class="videoYT" src="https://youtu.be/XWVGzkrV1mM" type=""></iframe>
+    <iframe class="videoYT" src="https://www.youtube.com/embed/XWVGzkrV1mM?si=zJi2kHCavJm2fV3o"
+        title="YouTube video player" frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
     <!-- Logros, Cursos y Seminarios -->
     <aside class="container contenedorLogros">
