se corrige el video de YT

--- a/Pages/about.html
+++ b/Pages/about.html
@@ -116,7 +116,7 @@
     </div>
 
     <!-- Video Youtube -->
-    <iframe class="videoYT" src="https://www.youtube.com/embed/XWVGzkrV1mM?si=zJi2kHCavJm2fV3o"
+    <iframe class="" width="560" height="315" src="https://www.youtube.com/embed/XWVGzkrV1mM?si=zJi2kHCavJm2fV3o"
         title="YouTube video player" frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
