--- a/Pages/about.html
+++ b/Pages/about.html
@@ -116,8 +116,8 @@
     </div>
 
     <!-- Video Youtube -->
-    <iframe class="videoYT" src="https://www.youtube.com/embed/XWVGzkrV1mM?si=zJi2kHCavJm2fV3o"
-        title="YouTube video player" frameborder="0"
+    <iframe class="videoYT" width="100%" height="56%"
+        src="https://www.youtube.com/embed/XWVGzkrV1mM?si=zJi2kHCavJm2fV3o" title="YouTube video player" frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
