--- a/Pages/about.html
+++ b/Pages/about.html
@@ -116,10 +116,13 @@
     </div>
 
     <!-- Video Youtube -->
-    <iframe class="videoYT" width="560" height="315" src="https://www.youtube.com/embed/XWVGzkrV1mM?si=zJi2kHCavJm2fV3o"
-        title="YouTube video player" frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <div class="embed-responsive embed-responsive-16by9">
+        <iframe class="videoYT" width="560" height="315"
+            src="https://www.youtube.com/embed/XWVGzkrV1mM?si=zJi2kHCavJm2fV3o" title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </div>
 
     <!-- Logros, Cursos y Seminarios -->
     <aside class="container contenedorLogros">
