--- a/Pages/about.html
+++ b/Pages/about.html
@@ -117,9 +117,8 @@
 
     <!-- Video Youtube -->
     <div class="embed-responsive embed-responsive-16by9">
-        <iframe class="videoYT" width="560" height="315"
-            src="https://www.youtube.com/embed/XWVGzkrV1mM?si=zJi2kHCavJm2fV3o" title="YouTube video player"
-            frameborder="0"
+        <iframe class="videoYT" src="https://www.youtube.com/embed/XWVGzkrV1mM?si=zJi2kHCavJm2fV3o"
+            title="YouTube video player" frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
