se corrige foto de sul-sa en academias

--- a/Pages/about_en.html
+++ b/Pages/about_en.html
@@ -669,7 +669,7 @@
             </div>
 
             <div class="card col-md-5">
-                <img class="cardImagen" src="../Multimedia/Academias/Sul Sa.png" alt="">
+                <img class="cardImagen" src="../Multimedia/Academias/sul-sa.png" alt="">
                 <div class="cardText">
                     <p class="tituloAcademia"> ACADEMIA SUL SA </p>
                     <p class="ubicacionAcademia instructorAcademia">Costa de Oro, Uruguay</p>
