--- a/Pages/about.html
+++ b/Pages/about.html
@@ -667,7 +667,7 @@
             </div>
 
             <div class="card col-xl-3">
-                <img class="cardImagen" src="../Multimedia/Academias/Sul Sa.png" alt="">
+                <img class="cardImagen" src="../Multimedia/Academias/sul-sa.png" alt="">
                 <div class="cardText">
                     <p class="tituloAcademia"> ACADEMIA SUL SA </p>
                     <p class="ubicacionAcademia instructorAcademia">Costa de Oro, Uruguay</p>
